<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="yunmao.com.petrichor.ui.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <!--<TextView-->
                <!--android:id="@+id/text"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="10dp"-->
                <!--android:paddingRight="10dp"-->
                <!--android:textIsSelectable="true" />-->


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_notes_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/notes_name"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_notes_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/remark"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:text="拍摄"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/next_button"
                tools:ignore="HardcodedText"
                android:background="@drawable/check_border"
                android:textColor="#ffffff"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_notes_paper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:minLines="7"
                    android:maxLines="14"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/notes_paper"
                    android:selectAllOnFocus="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:text="照相"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/camera_button"
                android:textColor="#ffffff"
                android:background="@drawable/check_border"
                tools:ignore="HardcodedText"  />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_notes_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:minLines="7"
                    android:maxLines="14"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/notes_note"
                    android:selectAllOnFocus="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/btn"
                android:onClick="onClick"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:background="@drawable/check_border"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_notes_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:minLines="1"
                    android:maxLines="1"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/notes_page"
                    android:selectAllOnFocus="true"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
            android:text="提交"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_button" android:textColor="#ffffff"
            tools:ignore="HardcodedText" android:background="@drawable/check_border"/>

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18dp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:background="#999"
                android:layout_height="1dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_above="@+id/btn"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:id="@+id/txtLog"
                    android:visibility="gone"/>
            </ScrollView>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:id="@+id/setting"
                android:layout_alignParentBottom="true"
                android:visibility="gone"/>



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>